[gd_scene load_steps=5 format=3 uid="uid://dej7jfplbowit"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_kby3r"]
[ext_resource type="Texture2D" uid="uid://rsfj2l2m4kxo" path="res://texture/Guns/gun1.png" id="2_8w7tk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nnay2"]
bg_color = Color(0, 0, 0, 0.270588)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pud71"]
bg_color = Color(0.384314, 0.847059, 0.368627, 0.882353)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="CanvasLayer" type="CanvasLayer"]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kby3r")

[node name="HpControl" type="Control" parent="HUD"]
anchors_preset = 0
offset_right = 208.0
offset_bottom = 32.0

[node name="HpBar" type="ProgressBar" parent="HUD/HpControl"]
layout_mode = 0
offset_left = 42.0
offset_top = 7.0
offset_right = 200.0
offset_bottom = 24.0
theme_override_colors/font_outline_color = Color(0.807724, 0.613475, 0.488657, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
theme_override_styles/background = SubResource("StyleBoxFlat_nnay2")
theme_override_styles/fill = SubResource("StyleBoxFlat_pud71")
value = 100.0

[node name="Label" type="Label" parent="HUD/HpControl"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 48.0
offset_bottom = 26.0
text = "HP："

[node name="WeaponControl" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="HUD/WeaponControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -40.0
offset_right = -15.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_8w7tk")
expand_mode = 1
stretch_mode = 6

[node name="WeaponLabel" type="Label" parent="HUD/WeaponControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -21.0
offset_right = -23.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 9
text = "手枪"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Bullet" type="Label" parent="HUD/WeaponControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -7.0
offset_right = -61.0
offset_bottom = 6.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 9
text = "30/30"
horizontal_alignment = 2
vertical_alignment = 1
